--- a/PowerWaiters/PowerWaiters/PowerWaiters/Views/ProfilePage.xaml
+++ b/PowerWaiters/PowerWaiters/PowerWaiters/Views/ProfilePage.xaml
@@ -9,26 +9,29 @@
     <ContentPage.Content>
         <ScrollView>
             <StackLayout Padding="20, 20" >
-                <Grid Padding="0, 10">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="150"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="2*" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <StackLayout Grid.Column="0" Padding="10">
-                        <Label Text="Name" FontSize="30" LineBreakMode="WordWrap" MaxLines="2" TextColor="Black"/>
-                        <Label Text="Description" FontSize="20" LineBreakMode="WordWrap" MaxLines="3" TextColor="Black"/>
-                    </StackLayout>
-                    <Grid Grid.Column="1">
-                        <Frame WidthRequest="100" HeightRequest="100" CornerRadius="50" VerticalOptions="Center" HorizontalOptions="Center" BackgroundColor="Black"
+                <Frame Background="#F1F1F1" CornerRadius="15" Padding="0">
+                    <Grid Padding="0, 10">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="120"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <StackLayout Grid.Column="0" Padding="10">
+                            <Label Text="{Binding User.Name}" FontSize="30" LineBreakMode="WordWrap" MaxLines="2" TextColor="Black"/>
+                            <Label Text="{Binding User.Description}" FontSize="20" LineBreakMode="WordWrap" MaxLines="3" TextColor="Black"/>
+                        </StackLayout>
+                        <Grid Grid.Column="1">
+                            <Frame WidthRequest="100" HeightRequest="100" CornerRadius="50" VerticalOptions="Center" HorizontalOptions="Center" BackgroundColor="Black"
                            Padding="0" Margin="0">
-                        </Frame>
+                                <Image Source="{Binding User.AvatarUrl}"/>
+                            </Frame>
+                        </Grid>
                     </Grid>
-                </Grid>
+                </Frame>
 
-                <Label Text="0" FontSize="50" HorizontalOptions="Center" TextColor="Black" FontAttributes="Bold"/>
+                <Label Text="{Binding User.Scores}" FontSize="50" HorizontalOptions="Center" TextColor="Black" FontAttributes="Bold"/>
 
                 <StackLayout>
                     <Label Text="Статистика" FontSize="30" TextColor="Black"/>
@@ -44,17 +47,19 @@
                         <CollectionView.ItemTemplate>
                             <DataTemplate>
                                 <Grid HeightRequest="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:ProfileViewModel}}, Path=StatsBlockHeight}" > <!--TODO-->
-                                    <StackLayout BackgroundColor="#F1F1F1" Padding="10, 10" Margin="5, 5">
-                                        <Label Text="{Binding Name}" 
+                                    <Frame Padding="0" Margin="5, 5" CornerRadius="15" BackgroundColor="#F1F1F1">
+                                        <StackLayout Padding="10, 10">
+                                            <Label Text="{Binding Name}" 
                                                FontSize="14" 
                                                TextColor="Black" 
                                                HorizontalOptions="Center"/>
-                                        <Label Text="{Binding Count}" 
+                                            <Label Text="{Binding Count}" 
                                                FontSize="24" 
                                                TextColor="Black" 
                                                VerticalOptions="End" 
                                                HorizontalOptions="Center"/>
-                                    </StackLayout>
+                                        </StackLayout>
+                                    </Frame>
                                 </Grid>
                             </DataTemplate>
                         </CollectionView.ItemTemplate>
@@ -65,23 +70,31 @@
                 <CollectionView ItemsSource="{Binding AchievementModels}">
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <Grid Padding="0, 10">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="100"/>
-                                </Grid.RowDefinitions>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="2*" />
-                                    <ColumnDefinition Width="*" />
-                                </Grid.ColumnDefinitions>
-                                <StackLayout Grid.Column="0" Padding="10">
-                                    <Label Text="Name" FontSize="30" LineBreakMode="WordWrap" MaxLines="2" TextColor="Black"/>
-                                    <Label Text="Description" FontSize="20" LineBreakMode="WordWrap" MaxLines="3" TextColor="Black"/>
-                                </StackLayout>
-                                <Grid Grid.Column="1">
-                                    <Frame WidthRequest="60" HeightRequest="60" CornerRadius="50" VerticalOptions="Center" HorizontalOptions="Center" BackgroundColor="Black"
-                           Padding="0" Margin="0">
-                                    </Frame>
-                                </Grid>
+                            <Grid>
+                                <Frame Padding="0" Margin="0, 10" CornerRadius="15">
+                                    <Grid Padding="10" BackgroundColor="#F1F1F1">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="100"/>
+                                        </Grid.RowDefinitions>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="2*" />
+                                            <ColumnDefinition Width="*" />
+                                        </Grid.ColumnDefinitions>
+                                        <StackLayout Grid.Column="0" Padding="10">
+                                            <Label Text="{Binding Name}" FontSize="30" LineBreakMode="WordWrap" MaxLines="2" TextColor="Black"/>
+                                            <Label Text="{Binding Description}" FontSize="20" LineBreakMode="WordWrap" MaxLines="3" TextColor="Black"/>
+                                        </StackLayout>
+                                        <Frame Grid.Column="1" 
+                                       WidthRequest="80" 
+                                       HeightRequest="80" 
+                                       CornerRadius="50" 
+                                       VerticalOptions="Center" 
+                                       HorizontalOptions="Center"
+                                       Padding="0" Margin="0">
+                                            <Image Source="{Binding IconUrl}"/>
+                                        </Frame>
+                                    </Grid>
+                                </Frame>
                             </Grid>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
