--- a/PowerWaiters/PowerWaiters/PowerWaiters/Views/ProfilePage.xaml
+++ b/PowerWaiters/PowerWaiters/PowerWaiters/Views/ProfilePage.xaml
@@ -79,20 +79,34 @@
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
                             <Grid HeightRequest="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:ProfileViewModel}}, Path=AchievementBlockHeight}">
-                                <Frame Padding="0" Margin="0, 10" CornerRadius="15" HasShadow="False">
-                                    <Grid Padding="10" BackgroundColor="#F1F1F1">
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="100"/>
-                                        </Grid.RowDefinitions>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="2*" />
-                                            <ColumnDefinition Width="*" />
-                                        </Grid.ColumnDefinitions>
-                                        <StackLayout Grid.Column="0" Padding="10">
-                                            <Label Text="{Binding Name}" FontSize="30" LineBreakMode="WordWrap" MaxLines="2" TextColor="Black"/>
-                                            <Label Text="{Binding Description}" FontSize="20" LineBreakMode="WordWrap" MaxLines="3" TextColor="Black"/>
-                                        </StackLayout>
-                                        <Frame Grid.Column="1" 
+                                <Frame Padding="0" Margin="0, 10" CornerRadius="15" HasShadow="False" BackgroundColor="{Binding BorderColor}">
+                                    <Frame Padding="0" Margin="3, 3" CornerRadius="13" HasShadow="False">
+                                        <Grid Padding="10" BackgroundColor="{Binding BackgroundColor}">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="100"/>
+                                            </Grid.RowDefinitions>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="2*" />
+                                                <ColumnDefinition Width="*" />
+                                            </Grid.ColumnDefinitions>
+                                            <StackLayout Grid.Column="0" Padding="10, 0, 0, 0">
+                                                <Label Text="{Binding Name}" 
+                                                   FontSize="24" 
+                                                   LineBreakMode="WordWrap" 
+                                                   TextColor="{Binding TextColor}"/>
+                                                <Label Text="{Binding Description}" 
+                                                   FontSize="18" 
+                                                   LineBreakMode="WordWrap" 
+                                                   MaxLines="2" 
+                                                   TextColor="{Binding TextColor}"/>
+                                                <Label Text="{Binding ProgressString}"
+                                                   FontSize="18" 
+                                                   LineBreakMode="WordWrap" 
+                                                   MaxLines="3" 
+                                                   TextColor="{Binding ProgressTextColor}" 
+                                                   VerticalOptions="End"/>
+                                            </StackLayout>
+                                            <Frame Grid.Column="1" 
                                                WidthRequest="80" 
                                                HeightRequest="80" 
                                                CornerRadius="50" 
@@ -100,9 +114,10 @@
                                                HorizontalOptions="Center"
                                                Padding="0" Margin="0"
                                                HasShadow="False">
-                                            <Image Source="{Binding IconUrl}"/>
-                                        </Frame>
-                                    </Grid>
+                                                <Image Source="{Binding IconUrl}"/>
+                                            </Frame>
+                                        </Grid>
+                                    </Frame>
                                 </Frame>
                             </Grid>
                         </DataTemplate>
