--- a/PowerWaiters/PowerWaiters/PowerWaiters/Views/PurposesPage.xaml
+++ b/PowerWaiters/PowerWaiters/PowerWaiters/Views/PurposesPage.xaml
@@ -39,7 +39,7 @@
                                                    MaxLines="3" 
                                                    TextColor="{Binding ProgressTextColor}" 
                                                    VerticalOptions="End"/>
-                                                <Label Text="{Binding Deadline}"
+                                                <Label Text="{Binding DeadlineString}"
                                                    FontSize="18" 
                                                    LineBreakMode="WordWrap" 
                                                    MaxLines="3" 
@@ -53,6 +53,7 @@
                                                    Margin="0"
                                                    TextColor="Black"
                                                    FontSize="36"
+                                                   FontAttributes="Bold"
                                                    Text ="{Binding Prize}"/>
                                         </Grid>
                                     </Frame>
@@ -61,7 +62,6 @@
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
                 </CollectionView>
-                <Label Text="Цели" FontSize="36" TextColor="Black" FontAttributes="Bold"/>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
