--- a/PowerWaiters/PowerWaiters/PowerWaiters/Views/ProfilePage.xaml
+++ b/PowerWaiters/PowerWaiters/PowerWaiters/Views/ProfilePage.xaml
@@ -10,7 +10,8 @@
     <ContentPage.Content>
         <ScrollView>
             <StackLayout Padding="20, 20" >
-                <Frame Background="#F1F1F1" CornerRadius="15" Padding="0" HasShadow="False">
+                <Label Text="Мой профиль" FontSize="30" TextColor="Black" Margin="0, 10"/>
+                <Frame CornerRadius="15" Padding="0">
                     <Grid Padding="10, 10">
                         <Grid.RowDefinitions>
                             <RowDefinition/>
