--- a/PowerWaiters/PowerWaiters/PowerWaiters/Views/ProfilePage.xaml
+++ b/PowerWaiters/PowerWaiters/PowerWaiters/Views/ProfilePage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:viewmodels="clr-namespace:PowerWaiters.ViewModels"
-             xmlns:models="clr-namespace:PowerWaiters.Models"
+             xmlns:models="clr-namespace:PowerWaiters.Models" 
+             xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
              x:Class="PowerWaiters.Views.ProfilePage">
     <ContentPage.BindingContext>
         <viewmodels:ProfileViewModel/>
@@ -10,46 +11,44 @@
     <ContentPage.Content>
         <ScrollView>
             <StackLayout Padding="20, 20" >
-                <Label Text="Мой профиль" FontSize="30" TextColor="Black" Margin="0, 10"/>
-                <Frame CornerRadius="15" Padding="0">
-                    <Grid Padding="10, 10">
-                        <Grid.RowDefinitions>
-                            <RowDefinition/>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="2*" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <StackLayout Grid.Column="0" Padding="10">
-                            <Label Text="{Binding User.FullName}" FontSize="24" LineBreakMode="WordWrap" MaxLines="2" TextColor="Black"/>
-                            <Label Text="{Binding User.Description}" FontSize="18" LineBreakMode="WordWrap" MaxLines="3" TextColor="Black"/>
-                        </StackLayout>
-                        <Grid Grid.Column="1" 
+                <Label Text="Мой профиль" FontSize="36+" TextColor="Black" Margin="0, 10"/>
+                <Grid Padding="0, 10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <StackLayout Grid.Column="0" Padding="10">
+                        <Label Text="{Binding User.FullName}" FontSize="24" LineBreakMode="WordWrap" MaxLines="2" TextColor="Black"/>
+                        <Label Text="{Binding User.Description}" FontSize="18" LineBreakMode="WordWrap" MaxLines="3" TextColor="Black"/>
+                    </StackLayout>
+                    <Grid Grid.Column="1" 
                               VerticalOptions="Center" 
                               HorizontalOptions="Center" >
-                            <Frame WidthRequest="100" 
+                        <Frame WidthRequest="100" 
                                    HeightRequest="100" 
                                    CornerRadius="50" 
                                    VerticalOptions="Center" 
                                    HorizontalOptions="Center" 
                                    Padding="0" Margin="0"
                                    HasShadow="False">
-                                <Image Source="{Binding User.AvatarUrl}"/>
-                            </Frame>
-                        </Grid>
+                            <Image Source="{Binding User.AvatarUrl}"/>
+                        </Frame>
                     </Grid>
-                </Frame>
+                </Grid>
 
                 <Label Text="{Binding User.Scores}" FontSize="50" HorizontalOptions="Center" TextColor="Black" FontAttributes="Bold"/>
 
                 <StackLayout>
-                    <Label Text="Статистика" FontSize="30" TextColor="Black"/>
+                    <Label Text="Статистика" FontSize="24" TextColor="Black"/>
                     <StackLayout Orientation="Horizontal" HeightRequest="40">
-                        <Button Text="День" TextTransform="None" FontSize="16" TextColor="Black" BorderColor="Black" BorderWidth="{Binding DayBtnBorderSize}" Padding="0"
+                        <Button Text="День" TextTransform="None" FontSize="16" TextColor="Black" Padding="5" BackgroundColor="{Binding DayBtnColor}" CornerRadius="5" HeightRequest="50"
                                 Command="{Binding UpdateStatistics}" CommandParameter="{x:Static models:StatisticsTimeSpan.Day}"/>
-                        <Button Text="Неделя" TextTransform="None" FontSize="16" TextColor="Black" BorderColor="Black" BorderWidth="{Binding WeekBtnBorderSize}" Padding="0"
+                        <Button Text="Неделя" TextTransform="None" FontSize="16" TextColor="Black" Padding="5" BackgroundColor="{Binding WeekBtnColor}" CornerRadius="5" HeightRequest="50"
                                 Command="{Binding UpdateStatistics}" CommandParameter="{x:Static models:StatisticsTimeSpan.Week}"/>
-                        <Button Text="Месяц" TextTransform="None" FontSize="16" TextColor="Black" BorderColor="Black" BorderWidth="{Binding MonthBtnBorderSize}" Padding="0"
+                        <Button Text="Месяц" TextTransform="None" FontSize="16" TextColor="Black" Padding="5" BackgroundColor="{Binding MonthBtnColor}" CornerRadius="5" HeightRequest="50"
                                 Command="{Binding UpdateStatistics}" CommandParameter="{x:Static models:StatisticsTimeSpan.Month}"/>
                     </StackLayout>
                     <CollectionView ItemsSource="{Binding StatisticsDisplayModels}" 
@@ -58,19 +57,30 @@
                         <CollectionView.ItemTemplate>
                             <DataTemplate>
                                 <Grid HeightRequest="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:ProfileViewModel}}, Path=StatsBlockHeight}" > <!--TODO-->
-                                    <Frame Padding="0" Margin="5, 5" CornerRadius="15" BackgroundColor="#F1F1F1" HasShadow="False">
+                                    <yummy:PancakeView Padding="0" Margin="5" CornerRadius="15" BackgroundColor="White">
+                                        <yummy:PancakeView.Shadow>
+                                            <yummy:DropShadow Color="#6000FF" Offset="20,20" Opacity="0.8" BlurRadius="3"/>
+                                        </yummy:PancakeView.Shadow>
                                         <StackLayout Padding="10, 10">
                                             <Label Text="{Binding Name}" 
                                                FontSize="14" 
                                                TextColor="Black" 
                                                HorizontalOptions="Center"/>
-                                            <Label Text="{Binding Count}" 
+                                            <StackLayout Orientation="Horizontal" Margin="5" Spacing="10">
+                                                <yummy:PancakeView CornerRadius="25">
+                                                    <Image Source="{Binding IconName}" HeightRequest="50" WidthRequest="50"/>
+                                                    <yummy:PancakeView.Shadow>
+                                                        <yummy:DropShadow BlurRadius="15" Color="Black" Opacity="1"/>
+                                                    </yummy:PancakeView.Shadow>
+                                                </yummy:PancakeView>
+                                                <Label Text="{Binding Count}" 
                                                FontSize="24" 
                                                TextColor="Black" 
-                                               VerticalOptions="End" 
+                                               VerticalOptions="Center" 
                                                HorizontalOptions="Center"/>
+                                            </StackLayout>
                                         </StackLayout>
-                                    </Frame>
+                                    </yummy:PancakeView>
                                 </Grid>
                             </DataTemplate>
                         </CollectionView.ItemTemplate>
